<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ * Copyright Ⓒ 2018. All rights reserved
  ~ * Author DangTin. Create on 2018/05/29
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/define_dimen_12">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_task_name"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-2dp"
                android:layout_marginTop="@dimen/define_dimen_2"
                android:hint="@string/hint_task_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/define_dimen_20"
                android:text="@string/title_description_1"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-2dp"
                android:layout_marginTop="@dimen/define_dimen_2"
                android:hint="@string/hint_description"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/define_dimen_20"
                android:text="@string/title_description_2"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-2dp"
                android:layout_marginTop="@dimen/define_dimen_2"
                android:hint="@string/hint_description"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_small" />

            <LinearLayout
                android:id="@+id/layout_select_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/define_dimen_20"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_category"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_normal" />

                <TextView
                    android:layout_width="@dimen/define_dimen_22"
                    android:layout_height="@dimen/define_dimen_22"
                    android:layout_marginLeft="@dimen/define_dimen_10"
                    android:background="@drawable/shape_circle_white_border_grey"
                    android:gravity="center"
                    android:text=" ? "
                    android:textColor="@color/orange"
                    android:textSize="@dimen/text_size_normal" />
            </LinearLayout>

            <include layout="@layout/layout_select_category" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/define_dimen_20"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/green"
                    android:gravity="center"
                    android:paddingBottom="@dimen/define_dimen_12"
                    android:paddingTop="@dimen/define_dimen_12"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_normal" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/orange"
                    android:gravity="center"
                    android:paddingBottom="@dimen/define_dimen_12"
                    android:paddingTop="@dimen/define_dimen_12"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_normal" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
