<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ * Copyright Ⓒ 2018. All rights reserved
  ~ * Author DangTin. Create on 2018/06/03
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include layout="@layout/layout_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout_button"
        android:paddingLeft="@dimen/define_dimen_20"
        android:paddingRight="@dimen/define_dimen_20"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/message_provide_to_improve"/>

        <TextView
            android:id="@+id/tv_too_tired"
            android:layout_width="@dimen/define_dimen_180"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/define_dimen_30"
            android:background="@drawable/bg_white_corner_border_grey"
            android:gravity="center"
            android:paddingBottom="@dimen/define_dimen_10"
            android:paddingTop="@dimen/define_dimen_10"
            android:text="@string/too_tired"
            android:textColor="@color/orange"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/tv_no_time"
            android:layout_width="@dimen/define_dimen_180"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/define_dimen_10"
            android:background="@drawable/bg_white_corner_border_grey"
            android:gravity="center"
            android:paddingBottom="@dimen/define_dimen_10"
            android:paddingTop="@dimen/define_dimen_10"
            android:text="@string/no_time"
            android:textColor="@color/orange"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/tv_too_difficult"
            android:layout_width="@dimen/define_dimen_180"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/define_dimen_10"
            android:background="@drawable/bg_white_corner_border_grey"
            android:gravity="center"
            android:paddingBottom="@dimen/define_dimen_10"
            android:paddingTop="@dimen/define_dimen_10"
            android:text="@string/too_difficult"
            android:textColor="@color/orange"
            android:textSize="@dimen/text_size_normal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/define_dimen_12"
        android:layout_marginRight="@dimen/define_dimen_12"
        android:layout_marginBottom="@dimen/define_dimen_20"
        android:layout_marginTop="@dimen/define_dimen_60"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_try_another"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="@dimen/define_dimen_10"
            android:paddingTop="@dimen/define_dimen_10"
            android:text="@string/try_another"
            android:textColor="@color/green"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/tv_skip_this"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_white_corner_border_grey"
            android:gravity="center"
            android:paddingBottom="@dimen/define_dimen_10"
            android:paddingTop="@dimen/define_dimen_10"
            android:text="@string/skip_this"
            android:textColor="@color/orange"
            android:textSize="@dimen/text_size_normal" />
    </LinearLayout>
</RelativeLayout>
