<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ * Copyright Ⓒ 2018. All rights reserved
  ~ * Author DangTin. Create on 2018/05/18
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/define_dimen_60"
            android:src="@drawable/image_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/define_dimen_60"
            android:gravity="bottom"
            android:orientation="vertical"
            android:padding="@dimen/define_dimen_14">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/textColorSecondary">

                <EditText
                    android:id="@+id/edt_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/user_name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="100"
                    android:singleLine="true"
                    android:textSize="@dimen/text_size_small" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/define_dimen_10"
                android:textColorHint="@color/textColorSecondary">

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLength="100"
                    android:singleLine="true"
                    android:textSize="@dimen/text_size_small" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tv_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/define_dimen_30"
                android:background="@drawable/bg_white_corner_border_grey"
                android:paddingBottom="@dimen/define_dimen_10"
                android:paddingLeft="@dimen/define_dimen_60"
                android:paddingRight="@dimen/define_dimen_60"
                android:paddingTop="@dimen/define_dimen_10"
                android:text="@string/sign_in"
                android:textColor="@color/orange"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/define_dimen_16"
                android:text="@string/forgot_password"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/red"
                android:visibility="gone"
                android:layout_marginTop="@dimen/define_dimen_16"
                android:text="@string/please_enter_valid_detail"
                android:textSize="@dimen/text_size_small" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/define_dimen_20"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/define_dimen_12"
                    android:text="@string/sign_in_other"
                    android:textSize="@dimen/text_size_small" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="@dimen/define_dimen_12"
                    android:src="@drawable/ic_login_facebook" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_login_google" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/define_dimen_30"
                android:layout_marginTop="@dimen/define_dimen_16"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/define_dimen_12"
                    android:text="@string/not_have_an_account"
                    android:textSize="@dimen/text_size_small" />

                <TextView
                    android:id="@+id/tv_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/sign_up"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
